# pyFaderport

./: .gitignore  README.md  setup.cfg
src/Faderport/: __init__.py  constants.py  helper_functions.py  structure.py
