[metadata]
name = pyFaderport
version = 0.0.1
author = Tim Gremalm
author_email = tim.gremalm@gremalm.se
description = Maps the Ableton Push in a object. Also exposes the interface over MQTT.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TimGremalm/pyFaderport
project_urls =
    Bug Tracker = https://github.com/TimGremalm/pyFaderport/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI APPROVED :: GNU GENERAL PUBLIC LICENSE V3 (GPLV3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    mido
	python-rtmidi
	pysh @ git+https://github.com/TimGremalm/pysh.git

[options.packages.find]
where = src

